# Fx_Quant_System

./: .gitignore  README.md
BackTest/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
BackTest/source/: CostFunction.cpp  CostFunction.h  DataRepository.cpp  DataRepository.h  Strategy.cpp  Strategy.h  Trade.cpp  Trade.h  main.cpp  stdafx.h
BackTest/source/PriceData/: PeriodCollection.cpp
DataUpdate/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
DataUpdate/source/: CDataUpdate.cpp  LocalFormat.cpp  LocalFormat.h  PeriodCollectionUpdateObserver.cpp  helpers.cpp  helpers.h  main.cpp  stdafx.h
DataUpdate/source/PriceData/: PeriodCollection.h  PriceDataInterfaces.h
include/: helpers.h
lib/java/: libfxcore2.so.1.6.5  libpricehistorymgr_jni.so.2.8  libquotesmgr2_jni.so.2.8
